content/docs/shifu-core/0.2.x/guide/layout.md
Folder Layout
=============

The Complete Layout
-------------------

The complete(after all stages including optional actions) folder layout should look like this:

    <ModelSetName>/
    ├───ModelConfig.json
    ├───ColumnConfig.json
    ├───models/
    │   ├───model0 
    │   ├───model1
    │   ├───model2
    │   └───...
    ├───evals
    │   ├───<EvalName1>/
    │   │   ├───EvalScore/
    │   │   ├───EvalConfusionMatrix
    │   │   └───EvalPerformonce.json
    │   └───...
    ├───tmp/
    │   ├───PreTrainStats/
    │   ├───NormalizedData/
    │   ├───SelectedRawData/
    │   └───BinAvgScore/
    ├───meta.column.names
    ├───categorical.column.names
    ├───forceselect.column.names
    ├───forceremove.column.names
    └───Eval1score.meta.column.names
    


If the ``source`` option in ModelConfig ``dataSet`` section is ``Local``, this folder will be on your local disk; if it is ``HDFS``, then this folder will be on HDFS however a mirror of the folder without ``tmp`` will be stored on local disk. If you would like to make some changes to ModelConfig, you should change the local file, ``shifu`` will automatically upload the file to HDFS.

Details
-------

### ModelConfig.json

The ``ModelConfig`` file. Learn more from [ModelConfig](../modelconfig) page.

* * *

### ColumnConfig.json

The ``ColumnConfig`` file. Learn more from [ColumnConfig](../columnconfig) page.

* * *

### models/

The folder contains all the trained models. The number of models depends on ``baggingNum`` in ``ModelConfig.train`` section

* * *

### evals/<EvalSetName>

The folder contrains all the evaluation results. The number of sub-folders depends on the length of ``ModelConfig.evals`` section. Each ``eval`` in ``ModelConfig.evals`` will have a separate sub-folder.

* #### evals/<EvalSetName>/EvalScore/

The score files generated by pig.

* #### evals/<EvalSetName>/EvalConfusionMatrix

The confusion matrix.

* #### evals/<EvalSetName>/EvalPerformance.json

The performance matrix.

* #### evals/<EvalSetName>/EvalNormalizedData/

The normalized data. This is generated only if ``saveNormalizedData`` is set to true.

* * *

### tmp/

The intermediate results. It is safe to remove this folder if the models are satisfactory. However due to some randomization in the training process, it is not able to regenerate the exact same result if you run the training commands again.

* #### tmp/PreTrainStats/

The result of ``$ shifu stats``. The result will be updated to ColumnConfig.

* #### tmp/NormalizedData/

The result of ``$ shifu normalize``. During ``$ shifu train``, only this folder will be load but not the raw data.

* #### tmp/SelectedRawData/

The result of ``$ shifu normalize``. Due to the sampling, the data used for training might be a portion of the original raw dataset. This folder matches the records in ``tmp/NormalizedData/`` however in raw form. During ``$ shifu posttrain``, only the raw data in this folder will be scored.

* #### tmp/BinAvgScore/

The result of ``$ shifu posttrain``. 

* * *

### meta.column.names

Auto-generated blank file to hold meta column names.

### categorical.column.names

Auto-generated blank file to hold categorical column names.

### forceselect.column.names

Auto-generated blank file to hold force-select column names.

### forceremove.column.names

Auto-generated blank file to hold force-remove column names.

### Eval1score.meta.column.names

Auto-generated blank file to hold meta column names to be shown in score files.
